Fixed display of radio item when it's too long.

--- a/components/BookingServices/BookingServices.scss
+++ b/components/BookingServices/BookingServices.scss
@@ -123,7 +123,7 @@
       }
 
       .BookingServicesRadioLabel {
-        // cursor: pointer;
+        width: 100%;
       }
     }
 
